FIX: increase header z-index

--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,7 @@ header {
 
   position: sticky;
   top: 0;
+  z-index: 5;
 
   background-color: var(--clr-white);
 }
